// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden output > matches the snapshot for mapped_enum 1`] = `
"# This file is generated by prisma-sqlmodel-gen.
# Package version: <dynamic>
# Schema hash: 6a446113ccb8
# Module: models.py
# Do not edit this file directly.

from enum import Enum
from typing import Any, Optional
from sqlmodel import Field, Relationship, SQLModel
from sqlalchemy import Column, Enum as SAEnum, Integer

class Role(str, Enum):
    ADMIN = 'ADMIN'
    USER = 'USER'

class User(SQLModel, table=True):
    __tablename__ = 'users'
    id: int | None = Field(sa_column=Column(Integer(), primary_key=True, nullable=False, autoincrement=True), default=None)
    role: Role = Field(sa_column=Column(SAEnum(Role, name='Role'), nullable=False), default=Role.USER)
"
`;

exports[`golden output > matches the snapshot for self_relation 1`] = `
"# This file is generated by prisma-sqlmodel-gen.
# Package version: <dynamic>
# Schema hash: 5981ff984e7b
# Module: models.py
# Do not edit this file directly.

from typing import Any, Optional
from sqlmodel import Field, Relationship, SQLModel
from sqlalchemy import Column, ForeignKey, Integer

class Category(SQLModel, table=True):
    __tablename__ = 'Category'
    id: int | None = Field(sa_column=Column(Integer(), primary_key=True, nullable=False, autoincrement=True), default=None)
    parentId: int | None = Field(sa_column=Column('parent_id', Integer(), ForeignKey('Category.id'), nullable=True), default=None)
    parent: Optional['Category'] = Relationship(back_populates='children', sa_relationship_kwargs={"foreign_keys": 'Category.parentId', "remote_side": 'Category.id'})
    children: list['Category'] = Relationship(back_populates='parent', sa_relationship_kwargs={"foreign_keys": 'Category.parentId'})
"
`;

exports[`golden output > matches the snapshot for simple 1`] = `
"# This file is generated by prisma-sqlmodel-gen.
# Package version: <dynamic>
# Schema hash: e75f9f2e4ebc
# Module: models.py
# Do not edit this file directly.

from typing import Any, Optional
from sqlmodel import Field, Relationship, SQLModel
from sqlalchemy import Column, Integer
from sqlalchemy.dialects.postgresql import VARCHAR

class User(SQLModel, table=True):
    __tablename__ = 'User'
    id: int | None = Field(sa_column=Column(Integer(), primary_key=True, nullable=False, autoincrement=True), default=None)
    email: str = Field(sa_column=Column(VARCHAR(255), unique=True, nullable=False))
"
`;
